<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/cereal_bg"

        />
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>



        <TextView
            android:id="@+id/new_group_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:text="@string/name"
            android:layout_below="@+id/toolbar"
            android:textSize="@dimen/text_size_large"
            android:padding="@dimen/margin_padding_size_medium"
            android:layout_weight="2">
        </TextView>
        <EditText
            android:id="@+id/new_goup_name"
            android:layout_below="@+id/new_group_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/nome_gruppo"
            android:inputType="textPersonName"
            android:padding="@dimen/margin_padding_size_medium"
            android:textSize="@dimen/text_size_large">
        </EditText>

        <TextView
            android:id="@+id/group_members"
            android:layout_below="@+id/new_goup_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:text="@string/componenti"
            android:textSize="@dimen/text_size_large"
            android:padding="@dimen/margin_padding_size_medium"
            android:layout_weight="2">
        </TextView>

        <ListView
            android:id="@+id/group_members_list"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_below="@+id/group_members"
            android:scrollbars="vertical"
            android:paddingBottom="@dimen/margin_padding_size_xxlarge">
        </ListView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/apply_group_button"
            android:text="Applica"
            style="@style/Widget.AppCompat.Button.Colored" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/AddMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/apply_group_button"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_add_user_button"
        android:tint="@color/white" />
</RelativeLayout>
