<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/cereal_bg"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

<ScrollView
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    app:layout_constraintTop_toBottomOf="@id/toolbar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aggiungi_prodotto"
            android:textSize="@dimen/text_size_large"
            android:layout_weight="4"
            android:layout_marginStart="@dimen/margin_padding_size_medium"
            android:layout_marginEnd="@dimen/margin_padding_size_medium"
            android:layout_marginRight="@dimen/margin_padding_size_medium"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:layout_marginBottom="@dimen/margin_padding_size_medium">
        </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/double_component_size"
        android:orientation="vertical"
        android:layout_gravity="start"
        android:layout_weight="2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prodotto"
            android:textSize="@dimen/text_size_large"
            android:layout_marginStart="@dimen/margin_padding_size_medium"
            android:layout_marginEnd="@dimen/margin_padding_size_medium"
            android:layout_marginRight="@dimen/margin_padding_size_medium"
            android:layout_marginTop="@dimen/margin_padding_size_medium"

            />
        <EditText
            android:id="@+id/add_list_product_name"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginStart="@dimen/margin_padding_size_medium"
            android:layout_marginEnd="@dimen/margin_padding_size_medium"
            android:layout_marginRight="@dimen/margin_padding_size_medium"

            >
        </EditText>
    </LinearLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/list_categories"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="@dimen/standard_component_size"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:layout_marginStart="@dimen/margin_padding_size_medium"
            android:layout_marginEnd="@dimen/margin_padding_size_medium"
            android:layout_marginRight="@dimen/margin_padding_size_medium"
            android:layout_marginBottom="@dimen/margin_padding_size_medium"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/double_component_size"
            android:orientation="horizontal"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantit"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:textSize="@dimen/text_size_medium"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                android:layout_marginRight="@dimen/margin_padding_size_medium"
                />
            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/numberpicker"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/double_component_size"
            android:orientation="vertical"
            android:layout_gravity="start"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textSize="@dimen/text_size_large"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                android:layout_marginRight="@dimen/margin_padding_size_medium"
                />
            <EditText
                android:id="@+id/add_list_product_notes"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_large"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                android:layout_marginRight="@dimen/margin_padding_size_medium"
                android:layout_marginBottom="@dimen/margin_padding_size_medium"
                >
            </EditText>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_list_button"
            android:text="@string/aggiungi"
            android:layout_marginStart="@dimen/margin_padding_size_medium"
            android:layout_marginEnd="@dimen/margin_padding_size_medium"
            android:layout_marginRight="@dimen/margin_padding_size_medium"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:layout_marginBottom="@dimen/margin_padding_size_medium"

            android:textSize="@dimen/text_size_medium"
            />

        <TextView
            android:id="@+id/TitlePreferiti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preferiti"
            android:textSize="@dimen/text_size_large"
            android:layout_weight="2"
            android:layout_marginStart="@dimen/margin_padding_size_medium"
            android:layout_marginEnd="@dimen/margin_padding_size_medium"
            android:layout_marginRight="@dimen/margin_padding_size_medium"
            android:layout_marginBottom="@dimen/margin_padding_size_medium">
        </TextView>

        <ListView
            android:id="@+id/add_list_product_favorites"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:scrollbars="vertical"
            android:paddingBottom="@dimen/margin_padding_size_xxlarge">

        </ListView>
    </LinearLayout>


</ScrollView>
</android.support.constraint.ConstraintLayout>