<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/cereal_bg"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/add_to_pantry_name"
                android:layout_height="wrap_content"
                android:hint="@string/prodotto"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:textSize="@dimen/text_size_large"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                android:layout_marginRight="@dimen/margin_padding_size_medium"
                android:layout_marginBottom="@dimen/margin_padding_size_medium"

                android:layout_weight="2">
            </EditText>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/add_to_pantry_category"
                android:layout_width="match_parent"
                android:layout_height="@dimen/standard_component_size"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                android:layout_marginRight="@dimen/margin_padding_size_medium"
                android:layout_marginBottom="@dimen/margin_padding_size_medium"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/double_component_size"
                android:orientation="horizontal"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantit"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:textSize="@dimen/text_size_large"
                    android:layout_marginStart="@dimen/margin_padding_size_medium"
                    android:layout_marginEnd="@dimen/margin_padding_size_medium"
                    android:layout_marginRight="@dimen/margin_padding_size_medium"
                    />
                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/add_to_pantry_quantity"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margin_padding_size_medium"
                    android:layout_marginEnd="@dimen/margin_padding_size_medium"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/double_component_size"
                android:orientation="horizontal"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peso_g"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:textSize="@dimen/text_size_large"
                    android:layout_marginStart="@dimen/margin_padding_size_medium"
                    android:layout_marginEnd="@dimen/margin_padding_size_medium"
                    android:layout_marginRight="@dimen/margin_padding_size_medium"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:inputType="numberDecimal"
                    android:layout_height="match_parent"
                    android:id="@+id/add_to_pantry_weight"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margin_padding_size_medium"
                    android:layout_marginEnd="@dimen/margin_padding_size_medium"
                    />

            </LinearLayout>


            <EditText
                android:id="@+id/add_to_pantry_price"
                android:layout_height="wrap_content"
                android:hint="@string/prezzo"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:textSize="@dimen/text_size_large"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                android:layout_marginRight="@dimen/margin_padding_size_medium"
                android:layout_marginBottom="@dimen/margin_padding_size_medium"
                android:layout_weight="2">
            </EditText>

            <EditText
                android:id="@+id/add_to_pantry_expiry"
                android:layout_height="wrap_content"
                android:hint="@string/scadenza"
                android:inputType="textPersonName"
                android:layout_width="wrap_content"
                android:textSize="@dimen/text_size_large"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                android:layout_marginRight="@dimen/margin_padding_size_medium"
                android:layout_marginBottom="@dimen/margin_padding_size_medium"
                android:layout_weight="2">
            </EditText>
            <EditText
                android:id="@+id/add_to_pantry_notes"
                android:layout_height="wrap_content"
                android:hint="@string/note"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:textSize="@dimen/text_size_large"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginEnd="@dimen/margin_padding_size_medium"
                android:layout_marginRight="@dimen/margin_padding_size_medium"
                android:layout_marginBottom="@dimen/margin_padding_size_medium"

                android:layout_weight="2">
            </EditText>



        </LinearLayout>



    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_to_pantry_btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/check48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_to_pantry_btn_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/barcode50"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/add_to_pantry_btn_submit"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>